# stock-simulation

./: CMakeLists.txt  README.md  data.cpp  data.h  main.cpp  menu.cpp  menu.h  output.h
lib/: consolecolor.h  request.h  winconsole.h
